--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "multi-range-slider-react": "^2.0.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-cookie": "^7.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
